# CSCI334Project

./: README.md
client/: local.db  pubspec.yaml
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/profile/: AndroidManifest.xml
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: alerts.dart  dashboard.dart  documents.dart  globals.dart  home.dart  login.dart  main.dart  map.dart  signup.dart  users.dart  visits.dart  welcome.dart
client/lib/screens/: alerts.dart  dashboard.dart  home.dart  login.dart  reports.dart  signup.dart  vaccine.dart  visits.dart  welcome.dart
client/lib/utils/constants/: app_globals.dart  asset_path.dart
client/lib/utils/helpers/: alerts-helper.dart  database-helper.dart  notification-helper.dart  statistics-helper.dart
client/lib/widgets/: qrcode-display.dart  qrcode-scan.dart  qrcode.dart
server/: README.md  database.py  db.sqlite3  db_uml.uxf  main.py  models.py  pyproject.toml  requirements.txt  schema.py  server.py  test.db
server/gql_server/: __init__.py  app.py  database.py  file_handling.py  middleware.py  models.py  schema.py
server/tests/: test_file_upload.py
